# rust_fantasy_football

./: Cargo.toml
java/: pom.xml
rust/: README.md
rust/src/controllers/: mod.rs
rust/src/data/ff/humans/: human_catcher.json  human_lineman.json  human_thrower.json
rust/src/models/: baseboard.rs  basegame.rs  gameerror.rs  mod.rs  piece.rs  player.rs  race.rs  team.rs  turn.rs
rust/src/models/decission/random/: mod.rs
rust/src/models/games/: mod.rs
rust/src/models/games/chess_game/: chess_bishop.rs  chess_board.rs  chess_game.rs  chess_king.rs  (+5 more)
rust/src/models/geometry/: square.rs
rust/src/models/timeline/: mod.rs  timeline_alternate.rs  timeline_base.rs
rust/src/web/: Cargo.toml
rust/src/web/src/: color_utils.rs
rust/src/web/src/components/: board.rs  game.rs
rust/src/web/src/engine/: mod.rs
src/: main.rs
src/controllers/: dice_service.rs
src/data/ff/humans/: human_blitzer.json
src/models/: ball.rs  basegame.rs  block.rs  coach.rs  dugout.rs  game.rs  gameerror.rs  gamephase.rs  gamestage.rs  mod.rs  passrange.rs  piece.rs  player.rs  player_status.rs  race.rs  rangeruler.rs  skill.rs  standing.rs  team.rs  team_status.rs  weather.rs
src/models/decission/random/: cointoss.rs
src/models/ff/: ff_passrange.rs  ff_player_status.rs  ff_race.rs  ff_rangeruler.rs  ff_turn.rs  ff_weather.rs  mod.rs
src/models/games/ff_game/: ff_ball.rs  ff_block.rs  ff_dugout.rs  ff_game.rs  ff_gamestage.rs  ff_rangeruler.rs  mod.rs
src/models/geometry/: square.rs
src/models/timeline/: mod.rs  timeline_alternate.rs
src/web/src/: main.rs  settings.rs
(+67 files in other folders)
