[package]
name = "rust_ff"
version = "0.1.0"
authors = ["oscargonzalezmoreno@gmail.com"]
edition = "2021"

[dependencies]
piston_window = "0.107.0"
crossbeam = "0.7.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.4.10", default-features = false }
rouler = "0.2.1"
rocket_contrib = "0.4.10"
log = "0.4.0"
fern = "0.5"
env_logger = "0.9.0"

[profile.dev]
# opt-level = 3serde_json = "1.0"