[package]
name = "rust_ff_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
gloo = "0.3"
wasm-bindgen = "0.2.74"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
lexicon = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlSelectElement',
  'Window',
  'WheelEvent',
]